cambios css tbm

--- a/HTML/CSS/DeclaSalud.css
+++ b/HTML/CSS/DeclaSalud.css
@@ -29,7 +29,7 @@
         }
         
         .header h1 {
-            color: #0abe55;
+            color: #15b156;
             margin-bottom: 5px;
             font-size: 24px;
         }
